--- a/lab02/index.html
+++ b/lab02/index.html
@@ -11,7 +11,7 @@
 <script>
 var buffer =[];
 var img = new Image();
-img.src = 'img.jpg';
+img.src = 'https://github.com/VladislavMashkov/VladislavMashkov.github.io/blob/master/lab02/img.jpg';
 img.onload = function() {
   function draw(img) {
 	var canvas = document.getElementById('lab02');
