--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
 <a href="/lab06">lab06</a><br>
 <a href="/lab7">lab07</a><br>
 <a href="/lab9">lab09</a><br>
-<a href="/rk1">rk1</a><br>
+<a href="/rk1lab10">rk1</a><br>
